--- a/carbonstyle.css
+++ b/carbonstyle.css
@@ -1,6 +1,8 @@
 body{
 	font-family:omnes-pro;
-	margin:5% 30% 5% 30%;
+	margin-top:5%;
+	margin-left:15%;
+	margin-right:20%;
 }
 
 .prototype{
@@ -14,6 +16,7 @@ body{
 ol li {
 	padding-left: 10px 
 }
+
 
 hr{
   border: 0.5px solid rgba(0,0,0,0.5);
