--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ body{
   font-family: omnes-semicond, 'Inter UI', sans-serif;
   letter-spacing: 1.2px;
   font-weight:300;
-  font-size:1.1em;
+  font-size:1.2em;
   color:#F4ECEC;
   height:100%;
   background:url("source/Text.svg"),url("source/Picture1.png");
@@ -260,18 +260,6 @@ header{
   overflow: auto;
 }
 
-.rotatingwords{
-  margin:0 auto;
-  width:100%;
-  text-align:center;
-  font-family:"Nettizen Script Dancing";
-  font-weight:normal;
-  font-size:calc(100px + 10vw);
-  color:#fff;
-  text-shadow:0px 0px 15px #e6b400;
-  position:absolute;
-  bottom:calc(60% + 3vw);
-}
 
 .overlaytext{
   margin: 121px auto;
@@ -540,12 +528,43 @@ hr{
 
 .sketches{
   width:140px;
+/* Zoom Animations */
+    transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
+    -webkit-transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
+    -o-transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
+    -moz-transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
+}
+
+.sketches:hover{
+    width:194px;
+    margin-left:-25px;
+}
+
+.sketches:active{
+    width:194px;  
+    margin-left:-25px;
 }
 
 .wireframes{
   height:235px;
   margin-top:4px;
+/* Zoom Animations */
+    transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
+    -webkit-transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
+    -o-transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
+    -moz-transition: width 0.3s ease,height 0.3s ease,left 0.3s ease,top 0.3s ease;
 }
+
+.wireframes:hover{
+    height:325px;
+    margin-left:-25px;
+}
+
+.wireframes:active{
+    height:325px;
+    margin-left:-25px;
+}
+
 
 .projthumbnail img{
   height:250px;
