--- a/style.css
+++ b/style.css
@@ -458,7 +458,39 @@ li{
 .home-wrapper{
 	height:280px;
 	overflow: hidden;
+	position:relative;
+	background-color:#5F6862;
 }
+
+.overlay-container{
+	/*transition: .5s ease;*/
+	opacity: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
+}
+
+.overlay-container img{
+	width:250px;
+}
+
+
+.home-wrapper:hover .overlay-container{
+	transition: 0.7s ease;
+	opacity: 1;
+}
+
+
+.home-wrapper:hover #AB_hero, .home-wrapper:hover .MF-hero-wrapper{
+	transition: 0.3s ease;
+	opacity: 0.5;
+	mix-blend-mode: overlay;
+}
+
+
 
 /* MAYFAIR - For INTERACTIONS section videos and HERO ANIMATION*/
 #MF_animation_1{
